<resources>
    <string name="app_name">PuSample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">LogIn</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="preference_file_key">login_preference</string>
    <string name="action_logout">Log out</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
</resources>
